--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_walk_val.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_walk_val.xml
@@ -18,6 +18,9 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:title="歩数を記録する画面"
+    app:titleTextColor="#ffffff"
+    app:titleTextAppearance="@style/TextAppearance.Toolbar"
+    android:textStyle="bold"
     tools:ignore="MissingConstraints" />
 
   <TextView
@@ -28,7 +31,7 @@
     android:layout_marginTop="16dp"
     android:text="日付を入力して歩数を記録しましょう"
     android:textAppearance="?android:attr/textAppearanceLarge"
-    android:textSize="30sp"
+    android:textSize="36sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +56,7 @@
       android:gravity="center"
       android:text="年 / 月 / 日"
       android:textAppearance="?android:attr/textAppearanceLarge"
-      android:textSize="24sp"
+      android:textSize="36sp"
       android:textStyle="bold" />
 
     <EditText
@@ -75,7 +78,7 @@
       android:gravity="center"
       android:text="歩"
       android:textAppearance="?android:attr/textAppearanceLarge"
-      android:textSize="24sp"
+      android:textSize="36sp"
       android:textStyle="bold" />
   </LinearLayout>
 
@@ -104,7 +107,7 @@
         android:drawableTint="#FFFFFF"
         android:text="日付を入力"
         android:textColor="#FFFFFF"
-        android:textSize="30sp"
+        android:textSize="48sp"
         android:textStyle="bold"
         tools:ignore="NestedWeights" />
 
@@ -117,7 +120,7 @@
         android:drawableStart="@drawable/ic_baseline_undo_24_60"
         android:text="前の画面に戻る"
         android:textColor="#000000"
-        android:textSize="30sp"
+        android:textSize="40sp"
         android:textStyle="bold" />
     </LinearLayout>
 
