--- a/packages/WalkingPromotor/app/src/main/res/layout/custom_dialog_diary.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/custom_dialog_diary.xml
@@ -14,7 +14,7 @@
       android:id="@+id/ctm_imgae_imageView"
       android:layout_width="0dp"
       android:layout_height="match_parent"
-      android:layout_weight="2"/>
+      android:layout_weight="1.8"/>
 
     <LinearLayout
       android:layout_width="0dp"
@@ -29,7 +29,7 @@
         android:layout_weight="2"
         android:gravity="center_vertical"
         android:text="Title"
-        android:textSize="30sp" />
+        android:textSize="36sp" />
 
       <TextView
         android:id="@+id/ctm_day_textView"
@@ -37,7 +37,7 @@
         android:layout_height="0dp"
         android:layout_weight="2"
         android:text="Day"
-        android:textSize="30sp" />
+        android:textSize="36sp" />
 
       <Button
         android:id="@+id/ctm_back_button"
@@ -46,8 +46,12 @@
         android:layout_weight="1"
         android:layout_marginBottom="20dp"
         android:background="@drawable/frame_style"
+        android:drawableStart="@drawable/ic_baseline_undo_24_60"
+        android:drawablePadding="10dp"
         android:text="この画面を閉じる"
-        android:textSize="24sp"/>
+        android:textStyle="bold"
+        android:padding="14dp"
+        android:textSize="30.5sp"/>
     </LinearLayout>
   </LinearLayout>
 
