--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_up.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_diary_up.xml
@@ -4,7 +4,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="io.github.healthifier.walking_promoter.activities.DiaryUpActivity">
+  tools:context="io.github.healthifier.walking_promoter.activities.PostDiaryActivity">
 
   <androidx.appcompat.widget.Toolbar
     android:id="@+id/main_toolbar"
