--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_share_photo.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_share_photo.xml
@@ -4,7 +4,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="io.github.healthifier.walking_promoter.activities.DataSelectActivity">
+  tools:context="io.github.healthifier.walking_promoter.activities.SharePhotoActivity">
 
   <!-- ツールバー -->
   <androidx.appcompat.widget.Toolbar
