--- a/packages/WalkingPromotor/app/src/main/res/layout/fragment_goal.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/fragment_goal.xml
@@ -16,7 +16,7 @@
     android:textAppearance="?android:attr/textAppearanceLarge" />
 
   <EditText
-    android:id="@+id/goalEditText"
+    android:id="@+id/stepEditText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ems="10"
