--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_record_step.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_record_step.xml
@@ -60,7 +60,7 @@
       android:textStyle="bold" />
 
     <EditText
-      android:id="@+id/goalEditText"
+      android:id="@+id/stepEditText"
       android:focusable="false"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
