--- a/packages/WalkingPromotor/app/src/main/res/layout/activity_step_program.xml
+++ b/packages/WalkingPromotor/app/src/main/res/layout/activity_step_program.xml
@@ -29,7 +29,7 @@
     android:layout_marginStart="1dp"
     android:layout_marginTop="1dp"
     android:layout_marginEnd="1dp"
-    android:stretchColumns="0,1"
+    android:stretchColumns="0,1,2"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:backgroundTint="#FAA6A4"
         android:drawableTop="@drawable/ic_baseline_create_24"
         android:drawableTint="#FFFFFF"
-        android:textSize="36sp"
+        android:textSize="34sp"
         android:textStyle="bold"
         android:text="歩数を記録" />
 
@@ -57,8 +57,19 @@
         android:layout_height="match_parent"
         android:backgroundTint="#FFF6CF"
         android:drawableTop="@drawable/ic_baseline_create_24"
-        android:text="自分の目標値を記録"
-        android:textSize="36sp"
+        android:text="自分の目標を記録"
+        android:textSize="34sp"
+        android:textStyle="bold" />
+
+      <Button
+        android:id="@+id/btn_look"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:backgroundTint="#FAA6A4"
+        android:drawableTop="@drawable/ic_baseline_search_24_1"
+        android:drawableTint="#FFFFFF"
+        android:text="歩数グラフを見る"
+        android:textSize="34sp"
         android:textStyle="bold" />
 
     </TableRow>
@@ -69,14 +80,14 @@
       android:layout_weight="1">
 
       <Button
-        android:id="@+id/btn_look"
+        android:id="@+id/btn_look_own"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:backgroundTint="#FFF6CF"
         android:drawableTop="@drawable/ic_baseline_search_24_1"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        android:text="自分の歩数を見る" />
+        android:text="自分の歩数を見る"
+        android:textSize="34sp"
+        android:textStyle="bold"/>
 
       <Button
         android:id="@+id/btn_look_all"
@@ -85,9 +96,9 @@
         android:backgroundTint="#FAA6A4"
         android:drawableTop="@drawable/ic_baseline_search_24_1"
         android:drawableTint="#FFFFFF"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        android:text="みんなの総歩数を見る" />
+        android:text="みんなの歩数を見る"
+        android:textSize="34sp"
+        android:textStyle="bold" />
 
       <Button
         android:id="@+id/btn_back"
@@ -95,9 +106,9 @@
         android:layout_height="match_parent"
         android:backgroundTint="#FFF6CF"
         android:drawableTop="@drawable/ic_baseline_undo_24"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        android:text="前の画面に戻る" />
+        android:text="前の画面に戻る"
+        android:textSize="34sp"
+        android:textStyle="bold" />
 
     </TableRow>
 
